specs-uat/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: onboarding-steps-us-fn-vs
  namespace: fission
spec:
  hosts:
    - dev.api.siga.me
  gateways:
    - develop/dev-istio-gateway
  http:
  - match:
    - uri:
        prefix: /router/onboarding_steps_us
    rewrite:
      uri: /onboarding_steps_us
    route:
    - destination:
        host: router.fission.svc.cluster.local
        port:
          number: 80
